Fixed home.css title-container width on mobile view.

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -97,6 +97,7 @@ code {
 
     .title-container {
       height: 3em;
+      width: 20rem;
     }
 
     .title-item {
